--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,19 @@
             <optional>true</optional>
         </dependency>
 
+        <!--security 依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <!--JWT 依赖-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -82,7 +95,7 @@
             <version>1.5.1.RELEASE</version>
         </dependency>
 
-        
+
 
     </dependencies>
 
